some fixes add <dependencyManagement> section to root pom add maven plugins change child pom's