@@ -4,36 +4,48 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>CloudStorage</artifactId>
-        <groupId>ru.igojig</groupId>
+        <groupId>ru.igojig.cloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-storage-client</artifactId>
+    <artifactId>client</artifactId>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.2</junit.version>
+        <javaFX.version>19</javaFX.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>ru.igojig</groupId>
-            <artifactId>cloud-storage-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>ru.igojig.cloud</groupId>
+            <artifactId>common</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>19</version>
+            <version>${javaFX.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>19</version>
+            <version>${javaFX.version}</version>
         </dependency>
 
         <dependency>
@@ -53,15 +65,12 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -71,7 +80,14 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ru.igojig.client/ru.igojig.client.ClientApp</mainClass>
+                            <mainClass>ru.igojig.cloud.client/ru.igojig.client.ClientApp</mainClass>
+                            <options>
+                                <option>-Dio.netty.tryReflectionSetAccessible=true</option>
+                                <option>--add-opens</option>
+                                <option>java.base/jdk.internal.misc=io.netty.all</option>
+                                <option>--add-opens</option>
+                                <option>java.base/java.nio=io.netty.all</option>
+                            </options>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
